syntax = "proto3";

option csharp_namespace = "TalyerStudio.Shared.Infrastructure.Grpc";

package customer;

service CustomerService {
  rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);
  rpc GetCustomers (GetCustomersRequest) returns (CustomersResponse);
}

message GetCustomerRequest {
  string customer_id = 1;
}

message GetCustomersRequest {
  string tenant_id = 1;
  int32 page_size = 2;
}

message CustomerResponse {
  string id = 1;
  string tenant_id = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone_number = 6;
  string barangay = 7;
  string municipality = 8;
  string province = 9;
}

message CustomersResponse {
  repeated CustomerResponse customers = 1;
  int32 total_count = 2;
}
